--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -943,14 +943,18 @@
   "This month": "This month",
   "Last month": "Last month",
   "This year": "This year",
+  "Add to GitHub": "Add to GitHub",
+  "Whoops, you need to accept the permissions in Github to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in Github to connect {{appName}} to your workspace. Try again?",
+  "Something went wrong while authenticating your request. Please try logging in again.": "Something went wrong while authenticating your request. Please try logging in again.",
+  "Get rich previews of GitHub links in documents": "Get rich previews of GitHub links in documents",
+  "Disconnect": "Disconnect",
+  "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.",
   "Add to Slack": "Add to Slack",
   "document published": "document published",
   "document updated": "document updated",
   "Posting to the <em>{{ channelName }}</em> channel on": "Posting to the <em>{{ channelName }}</em> channel on",
   "These events should be posted to Slack": "These events should be posted to Slack",
-  "Disconnect": "Disconnect",
   "Whoops, you need to accept the permissions in Slack to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in Slack to connect {{appName}} to your workspace. Try again?",
-  "Something went wrong while authenticating your request. Please try logging in again.": "Something went wrong while authenticating your request. Please try logging in again.",
   "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.": "Get rich previews of {{ appName }} links shared in Slack and use the <em>{{ command }}</em> slash command to search for documents without leaving your chat.",
   "Connect {{appName}} collections to Slack channels. Messages will be automatically posted to Slack when documents are published or updated.": "Connect {{appName}} collections to Slack channels. Messages will be automatically posted to Slack when documents are published or updated.",
   "Connect": "Connect",
