--- a/shared/i18n/locales/en_US/translation.json
+++ b/shared/i18n/locales/en_US/translation.json
@@ -943,10 +943,13 @@
   "This month": "This month",
   "Last month": "Last month",
   "This year": "This year",
-  "Add to GitHub": "Add to GitHub",
-  "Whoops, you need to accept the permissions in Github to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in Github to connect {{appName}} to your workspace. Try again?",
+  "Connect GitHub": "Connect GitHub",
+  "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?": "Whoops, you need to accept the permissions in GitHub to connect {{appName}} to your workspace. Try again?",
   "Something went wrong while authenticating your request. Please try logging in again.": "Something went wrong while authenticating your request. Please try logging in again.",
   "Get rich previews of GitHub links in documents": "Get rich previews of GitHub links in documents",
+  "Connect another account": "Connect another account",
+  "Connected accounts": "Connected accounts",
+  "GitHub links(pull request, issues etc.) accessible to any of the following accounts, will get rich previews inside {{appName}}.": "GitHub links(pull request, issues etc.) accessible to any of the following accounts, will get rich previews inside {{appName}}.",
   "Disconnect": "Disconnect",
   "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.": "The GitHub integration is currently disabled. Please set the associated environment variables and restart the server to enable the integration.",
   "Add to Slack": "Add to Slack",
